--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/zajimavosti.html">Zajímavosti</a>
+					<a href="">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
@@ -137,7 +137,7 @@
 
 			<div class="obrazek-text">
 				<div id="map"></div>
-				<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">
+				<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 0px 0px 10px 10px;">
 					Auschwitz na mapě
 				</div>
 			</div>
