přídána historie.html

--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
 	<div class="kolapsmenu">
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html">Historie</a>
+				<a href="historie.html">Historie</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="file:///C:/Users/werne/Desktop/Velká%20válka/zajimavosti.html">Zajímavosti</a>
+				<a href="">Zajímavosti</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="kolaps">
 				<div class="col-md-12 kolapsnabid">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html">Fotogalerie</a>
+					<a href="">Fotogalerie</a>
 				</div>
 			</div>	
 		</div>
 		
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="file:///C:/Users/werne/Desktop/Velká%20válka/prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
+				<a href="">Přihlášení</a>
 			</div>
 		</div>
 	</div>
@@ -88,7 +88,7 @@
 	<!-- Ikona -->
 	<div class="container">
 		<div class="mobilicon">
-			<a href="file:///C:/Users/werne/Desktop/Velká%20válka/index.html">	
+			<a href="index.html">	
 				<img src="icon.png">
 			</a>
 		</div>
@@ -98,13 +98,13 @@
 		<div class="menu">
 			<ul>
 				<li>
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html">Historie</a>
+					<a href="historie.html">Historie</a>
 				</li>
 				<li>
 					<a href="">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
+					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
 						<div class="drpdwn-menu">
 							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
 							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
@@ -112,7 +112,7 @@
 						</div>
 				</li>
 				<li class="prihlaseni">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
+					<a href="prihlaseni.html">Přihlášení</a>
 				</li>
 			</ul>
 		</div>
@@ -146,7 +146,7 @@
 
 			<p>Mimo hlavní tři tábory existovalo přibližně 40 pobočných táborů, z nichž se některé nacházely až desítky kilometrů od hlavních táborů, jejichž obsazenost se pohybovala od několika desítek po několik tisíc osob.</p>
 
-			<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html" style="color: #0ea30e;">Více se ale dozvíte zde.</a>
+			<a href="historie.html" style="color: #0ea30e;">Více se ale dozvíte zde.</a>
 
 		</div>
 	</div>	
@@ -170,7 +170,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-						<a href="https://www.facebook.com/prvnisvetovavalka" class="najdete">
+						<a href="https://www.facebook.com/auschwitzmemorial/" class="najdete">
 							<img src="facebook_icon.png" style="width: 25px; height: 25px;">
 						</a>
 						<a href="" class="najdete">
