--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 	<!-- Header pro PC -->
 		<div class="menu">
-			<ul>
+			<ul id="headerseznam">
 				<li>
 					<a href="historie.html">Historie</a>
 				</li>
