--- a/jmennyseznam.html
+++ b/jmennyseznam.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Zajímavosti</title>
+	<title>Seznam jmen</title>
 	<link rel="stylesheet" href="velkavalka.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -25,27 +25,27 @@
 	<div class="kolapsmenu">
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html">Historie</a>
+				<a href="historie.html">Historie</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="">Zajímavosti</a>
+				<a href="jmennyseznam.html">Jmenný seznam</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="kolaps">
 				<div class="col-md-12 kolapsnabid">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html">Fotogalerie</a>
+					<a href="fotogalerie.html">Fotogalerie</a>
 				</div>
 			</div>	
 		</div>
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="file:///C:/Users/werne/Desktop/Velká%20válka/prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
+				<a href="prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
 			</div>
 		</div>
 	</div>
@@ -70,7 +70,7 @@
 	<!-- Ikona -->
 	<div class="container">
 		<div class="mobilicon">
-			<a href="file:///C:/Users/werne/Desktop/Velká%20válka/index.html">	
+			<a href="index.html">	
 				<img src="icon.png">
 			</a>
 		</div>
@@ -78,23 +78,23 @@
 
 	<!-- Header pro PC -->
 		<div class="menu">
-			<ul>
+			<ul id="headerseznam">
 				<li>
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/historie.html">Historie</a>
+					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="">Zajímavosti</a>
+					<a href="jmennyseznam.html">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
+					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
 						<div class="drpdwn-menu">
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot_vyznos.html" class="drpdwn-nabidka3">Významné osoby</a>
+							<a href="fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
+							<a href="fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
+							<a href="fot_vyznos.html" class="drpdwn-nabidka3">Významné osoby</a>
 						</div>
 				</li>
 				<li class="prihlaseni">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
+					<a href="prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
 				</li>
 			</ul>
 		</div>
@@ -112,68 +112,7 @@
 	<!-- Hlavní sekce -->
 	<div class="mainsection pt-3">
 		<div class="container">
-			<h4 style="color: white;">Zajímavosti</h4>
-			<h5 style="padding-bottom: 20px;">Věděli jste, že...</h5>
-
-			<div class="zajim1">	
-				<div class="obrazek-text" style="float: left; margin-right: 10px;">
-					<img src="gas.jpg" class="index-img">
-					<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">Vojáci běžící v plynu</div>
-				</div>
-				<h6>Byl za první světové války poprvé použit bojový plyn?</h6>
-				<p> Stalo se tak 22. 4. 1915, když Německo vypustilo více jak 150 tun chlóru do vzduchu proti nepřátelským liniím. Stalo se tak u města Ypres, proto se tomuto bojovému plynu také občas říká "yperit". Útok byl tak nečekaný, že dokázal zdecimovat dvě divize francouzských a alžírských obránců.</p>
-
-				<p>Bojové plyny měly v 1. světové válce velký význam a proto se řadí mezi jeden z jejích symbolů. Po válce byly však bojové plyny zakázány a už se skoro nepoužívají.</p>
-			</div>
-
-			<div class="zajim2">
-				<div class="obrazek-text" style="margin-left: 10px;">
-					<img src="cambrai1.jpg" class="index-img">
-					<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">Britský Mark IV. u Cambrai</div>
-				</div>
-				<h6>Byly v první světové válce první tanky?</h6>
-				<p>Poprvé viděl světlo světa 6. září 1915, byl to konkrétně prototyp pojmenovaný "Little Willie", který se přehříval, vážil 14 tun, zasekával se v zákopech a jel pouze 3 km/h. Armáda v něm však viděla potenciál a tak přišlo na řadu zlepšení. To se Britům vyplatilo, protože v mnoha bitvách se např. Mark IV. osvědčily a přinesly skvělé výsledky.</p>
-
-				<p>Tanky nyní patří k nejdůležitějším složkám v armádách a můžeme vidět i odkaz jimi zanechaný v 2. světové válce.</p>
-			</div>
-
-			<div class="zajim1">
-				<div class="obrazek-text" style="float: left; margin-right: 10px;">
-					<img src="serbianw.jpg" class="index-img">
-					<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">Srbská výzbroj</div>
-				</div>
-				<h6>Došlo k obrovskému rozvoji technologie?</h6>
-				<p>V první světové válce mělo spoustu zbraní svůj debut, kulomety, samopaly, tanky, stíhací a bombardovací letouny, ponorky a mnohé další. Letadla a celkově letecká doprava byla masivně zlepšena a po válce začínaly i první komerční cesty. Ponorky a lodě se zdokonalily a námořní doprava byla po válce bezpečnější. V roce 1916 byl dokonce vyvinut předchůdce sonaru – systém ASDIC.</p>
-			</div>
-
-			<div class="zajim2">
-				<div class="obrazek-text" style="margin-left: 10px;">
-					<img src="teab.jpg" class="index-img">
-					<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">Masivní výroba čajových pytlíků</div>
-				</div>
-				<h6>Válka přinesla světu další vynálezy?</h6>
-
-				<p>Kvůli snaze zlepšit hygienu byly vyvinuty účinější hygienické ubrousky a dokonce i menstruační vložky. Firma Teekanne začala masovou produkci čaje v bavlěných pytlících. A také přišel obrovský zájem o zipy a náramkové hodinky.</p>
-
-				<p>Dokonce byla vyrobena korozivzdorná ocel, předek chirurgické oceli a došlo k zdokonalení radiokomunikace kvůli vyvíjejícímu letectví.</p>
-
-				<p>Snaha států šetřit elektřinou a uhlím vedla v mnoha zamích k zavedení letního času.</p>
-			</div>
-
-			<div class="zajim1" style="min-height: 525px;">
-				<div class="obrazek-text" style="float: left; margin-right: 10px;">
-					<img src="nzfk.jpg" class="index-img">
-					<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">Na západní frontě klid od E. M. Remarqueho</div>
-				</div>
-				<h6>Dopad na kulturu</h6>
-
-				<p>1. světová válka zplodila mnoho nových knížek, filmů, obrazů atd.</p>
-
-				<p>Mezi nejznámnější díla patří:</p>
-				<p>Na západní frontě klid, Tři kamarádi, Oheň, Sbohem, armádo a také Osudy dobrého vojáka Švejka za světové války</p><br>
-				<p>Mezi známé fily patří:</p>
-				<p>Žaluji, Dobrý voják Charlie, adaptace na díla jako Na západní frontě klid a Sbohem, armádo a také Lawrence z Arábie</p>
-			</div>
+			
 
 		</div>
 	</div>
@@ -259,7 +198,7 @@
 <footer class="pata">
 	<div class="container">
 			<div class="row">
-				<p class="col-sm-12" style="margin-top: 27.5px;">Werner Matěj, 1ITA</p>
+				<p class="col-sm-12" style="margin-top: 27.5px;">Auschwitz Fanklub, 2022</p>
 			</div>
 		</div>
 </footer>
