--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <footer class="pata">
 	<div class="container">
 			<div class="row">
-				<p class="col-sm-12" style="margin-top: 27.5px;">Werner Matěj, Šestořád Šimon, 2ITA</p>
+				<p class="col-sm-12" style="margin-top: 27.5px;">Auschwitz Fanklub, 2022</p>
 			</div>
 		</div>
 </footer>
