--- a/historie.html
+++ b/historie.html
@@ -31,7 +31,7 @@
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="zajimavosti.html">Jmenný seznam</a>
+				<a href="jmennyseznam.html">Jmenný seznam</a>
 			</div>
 		</div>
 
@@ -83,7 +83,7 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/zajimavosti.html">Jmenný seznam</a>
+					<a href="jmennyseznam.html">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
@@ -134,24 +134,18 @@
 
 			<p>Většina vězňů z prvních transportů zpočátku pracovala zejména na výstavbě a rozšiřování tábora. Do března roku 1941 jich bylo v táboře internováno na 10 900, převážně Poláků.</p><br>
 
-			<div class="obrazek-text">
-				<img src="schliefen.jpg" class="index-img">
-				<div style="background-color: #999999; color: #ffffff; text-align: center; border-radius: 10px;">
-					Schliefenův plán
-				</div>
-			</div>
-
-			
-
 			<h5>Auschwitz II</h5>
 			
-			
+			<p>Popudem ke stavbě druhého tábora se pravděpodobně stal Himmlerův rozkaz, který místo navštívil v březnu 1941. Jeho výstavba byla zahájena v říjnu roku 1941 na území vesnice Březinka, ze které bylo v dubnu 1941 vysídleno její obyvatelstvo a domy byly přestavěny nebo rozebrány a použity pro potřeby tábora. V nacistické dokumentaci měl tábor až do jara 1944 status zajateckého tábora, i přes to, že tuto funkci nikdy neplnil.</p>
+
+            <p>Práce zahájili sovětští váleční zajatci společně s pracovními oddíly složenými z ostatních vězňů na podzim roku 1941. Nejprve byli zaměstnáni při rozebírání budov z bývalé vesnice a shromažďování materiálu pro výstavbu baráků. Další oddíly měly na starost melioraci bahnitého terénu, vytyčení budoucího tábora, stavbu cest a dočasné úzkokolejky pro přivážení materiálu a mostu přes železniční trať, oddělující Birkenau od mateřského tábora. Po vzniku několika zděných budov byl tento úsek v únoru 1942 obehnán provizorním plotem z ostnatého drátu. Instalovány byly také jednoduché strážní věže a osvětlení. 1. března sem byli natrvalo umístěni sovětští váleční zajatci z mateřského tábora. Od té doby až do srpna 1943 fungoval tento úsek jako mužský tábor.</p>
 
 			<h5>Auschwitz III</h5>
-			<p><strong>Stručný souhrn</strong></p>
+			
 			<p>Okolní pracovní tábory, kterých bylo přibližně čtyřicet, byly úzce spojené s německým průmyslem a byly propojené se zbrojními závody, slévárnami a doly. Největší z těchto pracovních táborů byl Auschwitz III Monowitz, pojmenovaný po polské vesnici Monowice. Provoz zahájil v květnu 1942 jako pobočný tábor Auschwitz I a byl postaven v blízkosti chemických závodů Buna-Werke, vlastněných firmou IG Farbenindustrie, jež produkovaly syntetický benzín a umělý kaučuk. Od listopadu 1943 do listopadu 1944 fungoval jako samostatný tábor. V tomto období k němu patřily také všechny pobočné tábory Auschwitz I., jež měly průmyslový charakter.</p>
 
 			<p>V táboře bylo postupně vystavěno 60 vězeňských baráků, v nichž přebývalo kolem 11 000 vězňů. Byly zde často prováděny selekce práceneschopných vězňů, kteří odsud byli posíláni do plynových komor v Birkenau. Největší selekce proběhla 17. října 1944, při níž zahynulo více než 2000 osob. 18. ledna 1945 odsud bylo pěšky evakuováno více než 9 000 vězňů do Gliwic, asi 900 těžce nemocných zůstalo v táboře. Na území bývalého tábora byl po válce vybudován pomník.</p>
+
 		</div>
 	</div>	
 </section>
