CSS changes, jmennyseznam.html changes and some index.html changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="">Zajímavosti</a>
+				<a href="jmennyseznam.html">Zajímavosti</a>
 			</div>
 		</div>
 
@@ -48,7 +48,7 @@
 		
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="">Přihlášení</a>
+				<a href="prihlaseni.html">Přihlášení</a>
 			</div>
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="">Jmenný seznam</a>
+					<a href="jmennyseznam.html">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
