--- a/jmennyseznam.html
+++ b/jmennyseznam.html
@@ -112,8 +112,25 @@
 	<!-- Hlavní sekce -->
 	<div class="mainsection pt-3">
 		<div class="container">
-			
-
+			<div style="background-color: white; float: right; width: 50%; color: black; border-radius: 15px; padding: 10px;">
+				<h3>Přidání osoby</h3>
+				<p style="font-size: x-small;">(Zde přidáte člena, který není v naší databázi)</p><br>
+				<form>
+					<label for="prid-Jm">Jméno</label>
+					<input type="text" id="prid-Jm" class="prid-Inputy" placeholder="Jan"><br>
+					<label for="prid-Prijm">Příjmení</label>
+					<input type="text" id="prid-Prijm" class="prid-Inputy" placeholder="Novák"><br>
+					<label for="prid-Pohl">Pohlaví</label><br>
+					<input type="radio" id="prid-Pohl_muz" value="Muž">
+					<label for="prid-Pohl_muz">Muž</label>
+					<input type="radio" id="prid-Pohl_zena" value="Žena">
+					<label for="prid-Pohl_zena">Žena</label><br>
+					<label for="prid-MestBydl">Město bydliště před přesídlením</label>
+					<input type="text" id="prid-MestBydl" class="prid-Inputy" placeholder="Praha"><br>
+					<label for="prid-UliBydl">Ulice bydliště před přesídlením</label>
+					<input type="text" id="prid-UlitBydl" class="prid-Inputy" placeholder="Masarykova"><br>
+				</form>
+			</div>
 		</div>
 	</div>
 </section>
