--- a/jmennyseznam.html
+++ b/jmennyseznam.html
@@ -112,23 +112,37 @@
 	<!-- Hlavní sekce -->
 	<div class="mainsection pt-3">
 		<div class="container">
-			<div style="background-color: white; float: right; width: 50%; color: black; border-radius: 15px; padding: 10px;">
+			<div style="background-color: white; float: right; width: 65%; color: black; border-radius: 15px; padding: 10px;">
 				<h3>Přidání osoby</h3>
 				<p style="font-size: x-small;">(Zde přidáte člena, který není v naší databázi)</p><br>
 				<form>
-					<label for="prid-Jm">Jméno</label>
-					<input type="text" id="prid-Jm" class="prid-Inputy" placeholder="Jan"><br>
-					<label for="prid-Prijm">Příjmení</label>
-					<input type="text" id="prid-Prijm" class="prid-Inputy" placeholder="Novák"><br>
-					<label for="prid-Pohl">Pohlaví</label><br>
-					<input type="radio" id="prid-Pohl_muz" value="Muž">
-					<label for="prid-Pohl_muz">Muž</label>
-					<input type="radio" id="prid-Pohl_zena" value="Žena">
-					<label for="prid-Pohl_zena">Žena</label><br>
-					<label for="prid-MestBydl">Město bydliště před přesídlením</label>
-					<input type="text" id="prid-MestBydl" class="prid-Inputy" placeholder="Praha"><br>
-					<label for="prid-UliBydl">Ulice bydliště před přesídlením</label>
-					<input type="text" id="prid-UlitBydl" class="prid-Inputy" placeholder="Masarykova"><br>
+					<div style="width: 50%; float: left;">
+						<label for="prid-Jm">Jméno</label><br>
+						<input type="text" id="prid-Jm" class="prid-Inputy" placeholder="Jan"><br>
+					</div>
+					<div style="width: 50%; float: right;">
+						<label for="prid-Prijm">Příjmení</label><br>
+						<input type="text" id="prid-Prijm" class="prid-Inputy" placeholder="Novák"><br>
+					</div>
+					<div style="width: 50%; float: left;">
+						<label for="prid-Vek">Věk</label><br>
+						<input type="number" id="prid-Vek" class="prid-Inputy"><br>
+					</div>
+					<div style="width: 50%; float: right;">
+						<label for="prid-Pohl">Pohlaví</label><br>
+						<input type="radio" id="prid-Pohl_muz" value="Muž">
+						<label for="prid-Pohl_muz">Muž</label>
+						<input type="radio" id="prid-Pohl_zena" value="Žena">
+						<label for="prid-Pohl_zena">Žena</label><br>
+					</div>
+					<div style="width: 50%; float: left;">
+						<label for="prid-MestBydl">Město před přesídlením</label>
+						<input type="text" id="prid-MestBydl" class="prid-Inputy" placeholder="Praha"><br>
+					</div>
+					<div style="width: 50%; float: right;">
+						<label for="prid-Trans">Transport</label><br>
+						<input type="number" id="prid-Trans" class="prid-Inputy" placeholder="max. 999" max="999"><br>
+					</div>
 				</form>
 			</div>
 		</div>
