--- a/historie.html
+++ b/historie.html
@@ -31,7 +31,7 @@
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="jmennyseznam.html">Jmenný seznam</a>
+				<a href="jmennyseznam.php">Jmenný seznam</a>
 			</div>
 		</div>
 
