--- a/prihlaseni.html
+++ b/prihlaseni.html
@@ -83,7 +83,7 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="jmennyseznam.html">Jmenný seznam</a>
+					<a href="jmennyseznam.php">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
