samtájms ól aj fink ebaut is jů

--- a/historie.html
+++ b/historie.html
@@ -121,10 +121,10 @@
 			<p>Dne 20. května dorazil první transport třiceti kriminálních vězňů německého původu z koncentračního táboru Sachsenhausen. Byli označeni táborovými čísly 1–30 a stali se prvními funkcionáři ve vězeňské samosprávě, která udržovala dohled nad vězni v táboře a v pracovních oddílech. Ve stejný den přijelo i patnáct členů SS, kteří se ujali funkce dozorců.</p>
 
             
-            <ul id="seznam"> <!--Jsi fakt velkej kokot protože si to rozbil -->
-                <li>R. Höss: 4. května 1940 – listopad 1943</li>
-                <li>A. Liebehenschel: 11. listopadu 1943 – 10. května 1944</li>
-                <li>R. Baer: 11. května 1944 – leden 1945</li>
+            <ul style="padding-right: 40px;"> <!--Jsi fakt velkej kokot protože si to rozbil -->
+                <li>R. Höss: 4. května 1940 – listopad 1943</li><br>
+                <li>A. Liebehenschel: 11. listopadu 1943 – 10. května 1944</li><br>
+                <li>R. Baer: 11. května 1944 – leden 1945</li><br>
             </ul><br>
             
 
