--- a/historie.html
+++ b/historie.html
@@ -31,7 +31,7 @@
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="jmennyseznam.php">Jmenný seznam</a>
+				<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
 			</div>
 		</div>
 
@@ -83,7 +83,7 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="jmennyseznam.html">Jmenný seznam</a>
+					<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
