--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				
 
-				<a href="jmennyseznam.html">Jmenný seznam</a>
+				<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
 
 			</div>
 		</div>
@@ -105,7 +105,7 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="jmennyseznam.html">Jmenný seznam</a>
+					<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
 					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
