idk jdu dělat suicide

--- a/historie.html
+++ b/historie.html
@@ -31,14 +31,14 @@
 
 		<div class="row">
 			<div class="col-md-12 kolapsnabid">
-				<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
+				<a href="jmennyseznam.php">Jmenný seznam</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="kolaps">
 				<div class="col-md-12 kolapsnabid">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html">Fotogalerie</a>
+					<a href="komunitniseznam.php">Komunitní Seznam</a>
 				</div>
 			</div>	
 		</div>
@@ -77,27 +77,22 @@
 	
 
 	<!-- Header pro PC -->
-		<div class="menu">
-			<ul id="headerseznam">
-				<li>
-					<a href="historie.html">Historie</a>
-				</li>
-				<li>
-					<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
-				</li>
-				<li class="drpdwn">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
-						<div class="drpdwn-menu">
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot_vyznos.html" class="drpdwn-nabidka3">Významné osoby</a>
-						</div>
-				</li>
-				<li class="prihlaseni">
-					<a href="prihlaseni.html">Přihlášení</a>
-				</li>
-			</ul>
-		</div>
+    <div class="menu">
+        <ul id="headerseznam">
+            <li>
+                <a href="historie.html">Historie</a>
+            </li>
+            <li>
+                <a href="jmennyseznam.php">Jmenný seznam</a>
+            </li>
+            <li class="drpdwn">
+                <a href="komunitniseznam.php">Komunitní Seznam</a>
+            </li>
+            <li class="prihlaseni">
+                <a href="prihlaseni.html">Přihlášení</a>
+            </li>
+        </ul>
+    </div>
 	</div>		
 </header>
 
