--- a/index.html
+++ b/index.html
@@ -18,44 +18,40 @@
 
 <header class="hlava">
 <!-- Menu pro mobil -->
-	<div class="kolaps">
-			<div class="mobilmenu"> 
-				<div class="menuicon"></div>
-				<div class="menuicon"></div>
-				<div class="menuicon"></div>
-			</div>		
-	</div>	
-	<div class="kolapsmenu">
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-				<a href="historie.html">Historie</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-
-				
-
-				<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
-
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="kolaps">
-				<div class="col-md-12 kolapsnabid">
-					<a href="">Fotogalerie</a>
-				</div>
-			</div>	
-		</div>
-		
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-				<a href="prihlaseni.html">Přihlášení</a>
-			</div>
-		</div>
+<div class="kolaps">
+	<div class="mobilmenu"> 
+		<div class="menuicon"></div>
+		<div class="menuicon"></div>
+		<div class="menuicon"></div>
+	</div>		
+</div>	
+<div class="kolapsmenu">
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="historie.html">Historie</a>
 	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="jmennyseznam.php">Jmenný seznam</a>
+	</div>
+</div>
+
+<div class="row">
+	<div class="kolaps">
+		<div class="col-md-12 kolapsnabid">
+			<a href="komunitniseznam.php">Komunitní Seznam</a>
+		</div>
+	</div>	
+</div>
+
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="prihlaseni.html">Přihlášení</a>
+	</div>
+</div>
+</div>
 	
 	<script>
 	var coll = document.getElementsByClassName("kolaps");
@@ -105,15 +101,10 @@
 					<a href="historie.html">Historie</a>
 				</li>
 				<li>
-					<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
+					<a href="jmennyseznam.php">Jmenný seznam</a>
 				</li>
 				<li class="drpdwn">
-					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
-						<div class="drpdwn-menu">
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
-							<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fot_vyznos.html" class="drpdwn-nabidka3">Významné osoby</a>
-						</div>
+					<a href="komunitniseznam.php">Komunitní Seznam</a>
 				</li>
 				<li class="prihlaseni">
 					<a href="prihlaseni.html">Přihlášení</a>
