--- a/prihlaseni.html
+++ b/prihlaseni.html
@@ -15,40 +15,40 @@
 
 <header class="hlava">
 <!-- Menu pro mobil -->
-	<div class="kolaps">
-			<div class="mobilmenu"> 
-				<div class="menuicon"></div>
-				<div class="menuicon"></div>
-				<div class="menuicon"></div>
-			</div>		
-	</div>	
-	<div class="kolapsmenu">
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-				<a href="historie.html">Historie</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-				<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="kolaps">
-				<div class="col-md-12 kolapsnabid">
-					<a href="file:///C:/Users/werne/Desktop/Velká%20válka/fotogalerie.html">Fotogalerie</a>
-				</div>
-			</div>	
-		</div>
-
-		<div class="row">
-			<div class="col-md-12 kolapsnabid">
-				<a href="prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
-			</div>
-		</div>
+<div class="kolaps">
+	<div class="mobilmenu"> 
+		<div class="menuicon"></div>
+		<div class="menuicon"></div>
+		<div class="menuicon"></div>
+	</div>		
+</div>	
+<div class="kolapsmenu">
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="historie.html">Historie</a>
 	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="jmennyseznam.php">Jmenný seznam</a>
+	</div>
+</div>
+
+<div class="row">
+	<div class="kolaps">
+		<div class="col-md-12 kolapsnabid">
+			<a href="komunitniseznam.php">Komunitní Seznam</a>
+		</div>
+	</div>	
+</div>
+
+<div class="row">
+	<div class="col-md-12 kolapsnabid">
+		<a href="prihlaseni.html">Přihlášení</a>
+	</div>
+</div>
+</div>
 	
 	<script>
 	var coll = document.getElementsByClassName("kolaps");
@@ -77,27 +77,22 @@
 	
 
 	<!-- Header pro PC -->
-		<div class="menu">
-			<ul id="headerseznam">
-				<li>
-					<a href="historie.html">Historie</a>
-				</li>
-				<li>
-					<a href="http://localhost/werne/Test/jmennyseznam.php">Jmenný seznam</a>
-				</li>
-				<li class="drpdwn">
-					<a href="fotogalerie.html" class="drpdwn-tlac">Fotogalerie</a>
-						<div class="drpdwn-menu">
-							<a href="fot-zbrane.html" class="drpdwn-nabidka1">Zbraně</a>
-							<a href="fot-bitvy.html" class="drpdwn-nabidka2">Bitvy</a>
-							<a href="fot_vyznos.html" class="drpdwn-nabidka3">Významné osoby</a>
-						</div>
-				</li>
-				<li class="prihlaseni">
-					<a href="prihlaseni.html?prezdivka=&heslo=">Přihlášení</a>
-				</li>
-			</ul>
-		</div>
+	<div class="menu">
+		<ul id="headerseznam">
+			<li>
+				<a href="historie.html">Historie</a>
+			</li>
+			<li>
+				<a href="jmennyseznam.php">Jmenný seznam</a>
+			</li>
+			<li class="drpdwn">
+				<a href="komunitniseznam.php">Komunitní Seznam</a>
+			</li>
+			<li class="prihlaseni">
+				<a href="prihlaseni.html">Přihlášení</a>
+			</li>
+		</ul>
+	</div>
 	</div>		
 </header>
 
